--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="\index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
