--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -75,6 +75,4 @@
                 <li>UIL Academics Computer Science and Computer Science Applications</li>
                 <li>Marching Band</li>
             </ul>
-        </section
-
-New chat
+        </section>
