--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="AboutMePage\about-me.html">About</a></li>
-            <li><a href="ProjectsPage\Projects">Projects</a></li>
+            <li><a href="ProjectsPage\project">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="ResumePage\resume.html">Resume</a></li>
