--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         
         <div class="about-image">
-            <img src="about-image.jpg" alt="About Logan Warren">
+            <img src="Images\about-image.jpg" alt="About Logan Warren">
         </div>
     </div>
 </section>
