--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -18,6 +18,12 @@
         </ul>
     </nav>
     <main>
+      <section id="projects">
+    <h2>Projects</h2>
+    <div id="snake-game-container">
+      <h3>Snake Game</h3>
+      <canvas id="snake-game" width="400" height="400" style="border: 1px solid;"></canvas>
+    </div
         <section id="education">
             <h2>Education</h2>
             <h3>University of Pittsburgh</h3>
