--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -18,12 +18,11 @@
         </ul>
     </nav>
     <main>
-      <section id="projects">
-    <h2>Projects</h2>
-    <div id="snake-game-container">
-      <h3>Snake Game</h3>
-      <canvas id="snake-game" width="400" height="400" style="border: 1px solid;"></canvas>
-    </div
+     <div id="snake-game-container">
+                <h3>Snake Game</h3>
+                <canvas id="snake-game" width="400" height="400" style="border: 1px solid;"></canvas>
+            </div>
+        </section>
         <section id="education">
             <h2>Education</h2>
             <h3>University of Pittsburgh</h3>
@@ -44,5 +43,7 @@
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
     </footer>
+  <script src="snake_game.js"></script>
+
 </body>
 </html>
