--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,8 @@
         </ul>
     </nav>
     <main>
-     <div id="snake-game-container">
+        <section>
+            <div id="snake-game-container">
                 <h3>Snake Game</h3>
                 <canvas id="snake-game" width="400" height="400" style="border: 1px solid;"></canvas>
             </div>
@@ -43,7 +44,6 @@
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
     </footer>
-  <script src="snake_game.js"></script>
-
+    <script src="snake_game.js"></script>
 </body>
 </html>
