--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="main\index.html">Home</a></li>
             <li><a href="project.html">Projects</a></li>
         </ul>
     </nav>
