--- a/ResumePage/resume.html
+++ b/ResumePage/resume.html
@@ -31,8 +31,7 @@
             <h3>Chili's Grill & Bar</h3>
             <p>Server, April 2022 - July 2022</p>
             <ul>
-                <li>Took orders and assisted customers and kitchen staff</li>
-                <li>Managed a section of the restaurant</li>
+                <li>As a server, I managed a section of the restaurant where I took orders, and assisted customers and kitchen staff.</li>
             </ul>
             <h3>Cricket Wireless</h3>
             <p>Sales Associate, January 2022 - March 2022</p>
