--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -18,10 +18,10 @@
     </style>
   </head>
   <body>
-    <div>
-      <button id="startButton">Start Camera</button>
-      <button id="stopButton" disabled>Stop Camera</button>
-    </div>
+   // <div>
+   //   <button id="startButton">Start Camera</button>
+   //   <button id="stopButton" disabled>Stop Camera</button>
+   // </div>
     <video id="video" width="640" height="480" style="display: none;"></video>
     <canvas id="canvas" width="640" height="480"></canvas>
     <div id="keypoints"></div>
