--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -1,30 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hand Detection Example</title>
-    <!-- Import TensorFlow.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0"></script>
-    <!-- Import Hand Detection model -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASL Model</title>
     <style>
-      canvas {
-        border: 1px solid black;
-      }
-      video {
-        position: absolute;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .title-bar {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            font-size: 24px;
+        }
+        .name-section {
+            background-color: #F5F5F5;
+            padding: 20px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .content-section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+            background-color: #E0E0E0;
+        }
+        .pattern-paragraph, .image-container {
+            width: 45%;
+            margin-bottom: 20px;
+        }
+        .run-model-button {
+            display: block;
+            width: 200px;
+            height: 50px;
+            background-color: #2196F3;
+            color: white;
+            font-size: 18px;
+            text-align: center;
+            line-height: 50px;
+            margin: 20px auto;
+            border-radius: 4px;
+            text-decoration: none;
+        }
+        .run-model-button:hover {
+            background-color: #0D8BF2;
+            cursor: pointer;
+        }
     </style>
-  </head>
-  <body>
-   // <div>
-   //   <button id="startButton">Start Camera</button>
-   //   <button id="stopButton" disabled>Stop Camera</button>
-   // </div>
-    <video id="video" width="640" height="480" style="display: none;"></video>
-    <canvas id="canvas" width="640" height="480"></canvas>
-    <div id="keypoints"></div>
-    <script src="main.js"></script>
-  </body>
+</head>
+<body>
+    <div class="title-bar">ASL Model</div>
+    <div class="name-section">
+        <span>Person 1</span>
+        <span>Person 2</span>
+        <span>Person 3</span>
+        <span>Person 4</span>
+    </div>
+    <div class="content-section">
+        <div class="pattern-paragraph">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus condimentum libero, et cursus nulla egestas vitae.</p>
+        </div>
+        <div class="image-container">
+            <img src="image1.jpg" alt="Image 1" width="100%" height="auto">
+        </div>
+        <div class="image-container">
+            <img src="image2.jpg" alt="Image 2" width="100%" height="auto">
+        </div>
+        <div class="pattern-paragraph">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus condimentum libero, et cursus nulla egestas vitae.</p>
+        </div>
+    </div>
+    <a href="asl.html" class="run-model-button">Run Model</a>
+</body>
 </html>
