--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -58,10 +58,10 @@
 <body>
     <div class="title-bar">ASL Model</div>
     <div class="name-section">
-        <span>Person 1</span>
-        <span>Person 2</span>
-        <span>Person 3</span>
-        <span>Person 4</span>
+        <span>Logan Warren</span>
+        <span>Xavier Bear</span>
+        <span>Chris Landingin</span>
+        <span>Brayden Nguyen</span>
     </div>
     <div class="content-section">
         <div class="pattern-paragraph">
@@ -71,7 +71,7 @@
             <img src="image1.jpg" alt="Image 1" width="100%" height="auto">
         </div>
         <div class="image-container">
-            <img src="image2.jpg" alt="Image 2" width="100%" height="auto">
+            <img src="asl-clipart-ASL.png" alt="Image 2" width="100%" height="auto">
         </div>
         <div class="pattern-paragraph">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus condimentum libero, et cursus nulla egestas vitae.</p>
