--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: black;
-            color: #FFFF00;
+            color: #0d0d0d;
         }
         .title-bar {
             background-color: #006400;
