--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: black;
-            color: #0d0d0d;
+            color: #ffffff;
         }
         .title-bar {
             background-color: #006400;
@@ -32,7 +32,7 @@
             flex-wrap: wrap;
             justify-content: space-around;
             padding: 20px;
-            background-color: #000000;
+            background-color: #0d0d0d;
         }
         .pattern-paragraph, .image-container {
             width: 45%;
