--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -14,7 +14,7 @@
             color: #ffffff;
         }
         .title-bar {
-            background-color: #e6e600;
+            background-color: #b3b300;
             color: white;
             text-align: center;
             padding: 15px;
