--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -45,7 +45,7 @@
             display: block;
             width: 250px;
             height: 60px;
-            background-image: linear-gradient(to top right, #006400 50%, #b3b300 50%);
+            background-image: linear-gradient(to top right, #0000ff 50%, #b3b300 50%);
             color: white;
             font-size: 20px;
             text-align: center;
