--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -81,7 +81,13 @@
     <div class="content-section">
         <div class="pattern-paragraph">
             <h2>ASL Model Motivation</h2>
-            <p class="outlined-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus condimentum libero, et cursus nulla egestas vitae.</p>
+            <p class="outlined-paragraph">The motivation for our ASL Model project is to provide a more accessible and 
+                efficient means of communication for individuals who are deaf or hard of hearing. American Sign Language (ASL) 
+                is a complex language that uses hand gestures and facial expressions to convey meaning. However, not everyone is 
+                proficient in ASL, which can create communication barriers for those who rely on it. By developing a model that can 
+                recognize and translate signed letters into text, we hope to bridge this gap and enable smoother communication for all. 
+                Additionally, this project can have potential applications in fields such as education and healthcare, where ASL interpretation 
+                is essential but not always readily available.</p>
         </div>
         <div class="image-container">
             <img src="image1.jpg" alt="Image 1" width="100%" height="auto">
