--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -45,7 +45,7 @@
             display: block;
             width: 250px;
             height: 60px;
-            background-image: linear-gradient(to top right, #006400 50%, #b3b300 50%);
+            background-image: linear-gradient(to top right, #0000ff 50%, #b3b300 50%);
             color: white;
             font-size: 20px;
             text-align: center;
@@ -53,10 +53,10 @@
             margin: 20px auto;
             border-radius: 4px;
             text-decoration: none;
-            text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+            border: 2px solid white;
         }
         .run-model-button:hover {
-            background-image: linear-gradient(to top right, #004C00 50%, #a6a600 50%);
+            background-image: linear-gradient(to top right, #0000ff 50%, #b3b300 50%);
             cursor: pointer;
         }
         .name {
@@ -86,14 +86,14 @@
                 is a complex language that uses hand gestures and facial expressions to convey meaning. However, not everyone is 
                 proficient in ASL, which can create communication barriers for those who rely on it. By developing a model that can 
                 recognize and translate signed letters into text, we hope to bridge this gap and enable smoother communication for all. 
-                Additionally, this project can have potential applications in fields such as education and healthcare, where ASL interpretation 
-                is essential but not always readily available.</p>
+            Additionally, this project can have potential applications in fields such as education and healthcare, where ASL interpretation 
+            is essential but not always readily available.</p>
         </div>
         <div class="image-container">
             <img src="image1.jpg" alt="Image 1" width="100%" height="auto">
         </div>
         <div class="image-container">
-                        <img src="asl-clipart-ASL.png" alt="Image 2" width="100%" height="auto">
+            <img src="asl-clipart-ASL.png" alt="Image 2" width="100%" height="auto">
         </div>
         <div class="pattern-paragraph">
             <h2>ASL Model Description</h2>
@@ -103,3 +103,4 @@
     <a href="asl.html" class="run-model-button">Run Model</a>
 </body>
 </html>
+
