--- a/ProjectsPage/ASL/asl.html
+++ b/ProjectsPage/ASL/asl.html
@@ -1,23 +1,78 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hand Detection Example</title>
-    <!-- Import TensorFlow.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0"></script>
-    <!-- Import Hand Detection model -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7"></script>
-    <style>
-      canvas {
-        border: 1px solid black;
-      }
-      video {
-        position: absolute;
-      }
-    </style>
-  </head>
-  <body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CSS to HTML Example with Hand Detection</title>
+<!-- Import TensorFlow.js -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0"></script>
+<!-- Import Hand Detection model -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7"></script>
+<style>
+  .App {
+    text-align: center;
+  }
+
+.App-logo {
+height: 40vmin;
+pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+.App-logo {
+animation: App-logo-spin infinite 20s linear;
+}
+}
+
+.App-header {
+background-color: #282c34;
+min-height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+font-size: calc(10px + 2vmin);
+color: white;
+}
+
+.App-link {
+color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+from {
+transform: rotate(0deg);
+}
+to {
+transform: rotate(360deg);
+}
+}
+
+canvas {
+border: 1px solid black;
+}
+video {
+position: absolute;
+}
+</style>
+</head>
+<body>
+  <div class="App">
+    <header class="App-header">
+      <img src="your-logo-source" class="App-logo" alt="logo" />
+      <p>
+        Edit <code>src/App.js</code> and save to reload.
+      </p>
+      <a
+        class="App-link"
+        href="https://reactjs.org"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Learn React
+      </a>
+    </header>
     <div>
       <button id="startButton">Start Camera</button>
       <button id="stopButton" disabled>Stop Camera</button>
@@ -25,6 +80,7 @@
     <video id="video" width="640" height="480" style="display: none;"></video>
     <canvas id="canvas" width="640" height="480"></canvas>
     <div id="keypoints"></div>
-    <script src="main.js"></script>
-  </body>
+  </div>
+<script src="main.js"></script>
+</body>
 </html>
