--- a/ProjectsPage/ASL/asl.html
+++ b/ProjectsPage/ASL/asl.html
@@ -1,67 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hand Detection Example</title>
-<!-- Import TensorFlow.js -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0"></script>
-<!-- Import Hand Detection model -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7"></script>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hand Detection</title>
+  <!-- Import TensorFlow.js -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0"></script>
+  <!-- Import Hand Detection model -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@0.0.7"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #282c34;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-.video-container {
-  position: relative;
-  display: inline-block;
-}
+    .top-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-canvas, video {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+    button {
+      background-color: #61dafb;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 4px;
+      outline: none;
+    }
+    
 
-button {
-  background-color: #61dafb;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 4px;
-  outline: none;
-}
+    button:hover {
+      background-color: #4da9e7;
+    }
 
-button:hover {
-  background-color: #4da9e7;
-}
+    button:active {
+      background-color: #3b8dbd;
+    }
 
-button:active {
-  background-color: #3b8dbd;
-}
+    button:disabled {
+      background-color: #a9a9a9;
+      cursor: not-allowed;
+    }
 
-button:disabled {
-  background-color: #a9a9a9;
-  cursor: not-allowed;
-}
-</style>
+    .video-container {
+      position: absolute;
+      display: flex;
+      /* align-items: center; */
+      justify-content: center; /* Add this line */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); /* Add this line */
+    }
+
+    canvas, video {
+      width: 640px;
+      height: 480px;
+      position: absolute;
+      margin: auto;
+      top: 0;
+      bottom: 0;
+      left: 20;
+      right: 0;
+    }
+    .keypoints-container {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      text-align: center;
+      padding-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-  <div>
+  <div class="top-container">
     <button id="startButton">Start Camera</button>
     <button id="stopButton" disabled>Stop Camera</button>
     <button id="toggleKeypointsButton">Toggle Keypoints</button>
@@ -70,6 +96,10 @@ button:disabled {
     <video id="video" width="640" height="480" style="display: none;"></video>
     <canvas id="videoCanvas" width="640" height="480" style="display: none;"></canvas>
     <canvas id="keypointsCanvas" width="640" height="480"></canvas>
+    <canvas id="border" style="border: 3px solid black; display: none"></canvas>
+  </div>
+  <div class="keypoints-container">
+    <div id="keypointsOutput" style="color:white"> </div>
   </div>
   <script src="main.js"></script>
 </body>
