--- a/ProjectsPage/ASL/index.html
+++ b/ProjectsPage/ASL/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASL Model</title>
+    <title>ASL MODEL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: black;
-            color: #ffffff;
+            color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .title-bar {
-            background-color: #b3b300;
+            background-color: #000000;
             color: white;
             text-align: center;
             padding: 15px;
             font-size: 24px;
         }
         .name-section {
-            background-color: #000000;
+            background-color: #383837;
             padding: 20px;
             display: flex;
             justify-content: space-around;
@@ -31,21 +34,22 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            padding: 20px;
-            background-color: #0d0d0d;
+            padding: 0px;
+            background-color: #5E5E5C;
+            flex-grow: 1;
         }
         .pattern-paragraph, .image-container {
             width: 45%;
-            margin-bottom: 20px;
+            margin-bottom: 0px;
         }
         h2 {
-            color: #0000FF;
+            color: #000000;
         }
         .run-model-button {
             display: block;
             width: 250px;
             height: 60px;
-            background-image: linear-gradient(to top right, #0000ff 50%, #b3b300 50%);
+            background-image: linear-gradient(to top right, #057840 50%, #057840 50%);
             color: white;
             font-size: 20px;
             text-align: center;
@@ -55,23 +59,22 @@
             text-decoration: none;
             border: 2px solid white;
         }
-        .run-model-button:hover {
-            background-image: linear-gradient(to top right, #0000ff 50%, #b3b300 50%);
-            cursor: pointer;
-        }
         .name {
             margin: 0 5px;
             text-decoration: underline;
         }
         .outlined-paragraph {
             border: 2px solid #b3b300;
-            border-radius: 10px;
+            border-radius: 0px;
             padding: 10px;
         }
     </style>
 </head>
 <body>
-    <div class="title-bar">ASL Model</div>
+    <div class="title-bar">
+        ASL Model
+        <div class="award-text" style="color: #b3b300;">STEELHACKS 2023 First Place Overall Winner</div>
+    </div>
     <div class="name-section">
         <span class="name">Logan Warren</span>
         <span class="name">Xavier Bear</span>
@@ -90,17 +93,19 @@
             is essential but not always readily available.</p>
         </div>
         <div class="image-container">
-            <img src="image1.jpg" alt="Image 1" width="100%" height="auto">
+            <img src="\Images\apbpjgud.bmp" alt="Image 1" width="546" height="350">
         </div>
         <div class="image-container">
-            <img src="asl-clipart-ASL.png" alt="Image 2" width="100%" height="auto">
+            <img src="\Images\asl-clipart-ASL.png" alt="Image 2" width="100%" height="270">
         </div>
         <div class="pattern-paragraph">
             <h2>ASL Model Description</h2>
-            <p class="outlined-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus condimentum libero, et cursus nulla egestas vitae.</p>
+            <p class="outlined-paragraph">Our model works by taking live video, feeding it through TensorFlow to use the data from people's
+                hand gestures. We feed that data into a model that we trained with around 25 thousand pictures 
+                that returns a sign languange letter with up to 75% confidence!
+            </p>
         </div>
     </div>
     <a href="asl.html" class="run-model-button">Run Model</a>
 </body>
 </html>
-
