--- a/ProjectsPage/ASL/asl.html
+++ b/ProjectsPage/ASL/asl.html
@@ -99,8 +99,9 @@
     <canvas id="border" style="border: 3px solid black; display: none"></canvas>
   </div>
   <div class="keypoints-container">
-    <div id="keypointsOutput" style="color:white"> </div>
+    <div id="keypointsOutput" style="color:white"></div>
+    <div id="textOutput" style="color:white"></div>
   </div>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 </html>
