--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Email: loganwcollege@gmail.com</p>
         <p>Phone: +1 (210) 364-9506</p>
         <p><a href="https://www.linkedin.com/in/logan-warren-2232371a8/" target="_blank">LinkedIn</a></p>
-        <p><a href="https://github.com/Logan-Warren" target="_blank">GitHub</a></p>
+        <p><a href="https://github.com/LoganWarren" target="_blank">GitHub</a></p>
     </section>
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
