--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <nav>
         <ul>
             <li><a href="AboutMePage\about-me.html">About</a></li>
-            <li><a href="ProjectsPage\project">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li><a href="ProjectsPage\project.html">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="ResumePage\resume.html">Resume</a></li>
         </ul>
@@ -39,33 +38,32 @@
         </div>
     </div>
 </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <!-- Add your projects here -->
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of Project 1</p>
+<section id="projects">
+    <h1>Projects</h1>
+    <div class="project">
+        <h3>Current Project</h3>
+        <p> No Current Project</p> 
+        
+    </div>
+    <div class="project">
+        <h3>Most Recent Project</h3>
+        <div class="project-description">
+            <h3>ASLModel</h3>
+            <h3>STEELHACKS 2023 - 1st Place Winner</h3>
+            <a href="ASL\index.html">Run the ASLModel</a>
+            <br><br>
+            <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
+            <p>Provide a brief description of the project here.</p>
         </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of Project 2</p>
-        </div>
-    </section>
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <!-- Add more skills -->
-        </ul>
+    </div>
+</section>
     </section>
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: loganwcollege@gmail.com</p>
         <p>Phone: +1 (210) 364-9506</p>
         <p><a href="https://www.linkedin.com/in/logan-warren-2232371a8/" target="_blank">LinkedIn</a></p>
-        <p><a href="https://github.com/LoganWarren" target="_blank">GitHub</a></p>
+        <p><a href="https://github.com/Logan-Warren" target="_blank">GitHub</a></p>
     </section>
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
