--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -3,48 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logan Warren - Resume</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="resume-styles.css">
+    <title>Logan Warren - Projects</title>
+    <link rel="stylesheet" href="project.css">
+    <style></style>
 </head>
 <body>
-    <header>
-        <h1>Logan Warren - Projects</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="\index.html">Home</a></li>
-            <li><a href="project.html">Projects</a></li>
-            <li><a href="ASL\index.html">Projects</a></li>
-        </ul>
-    </nav>
+    <div class="title-bar">
+        <h1 class="main-title">Logan Warren - Projects </h1>
+        
+        <div class="nav-links">
+            <a href="\index.html" class="nav-link">Home</a>
+            <a href="\ResumePage\resume.html"class="nav-link">Resume</a>
+        </div>
+    </div>
     <main>
-        <section>
-            <div id="snake-game-container">
-                <h3>Snake Game</h3>
-                <canvas id="snake-game" width="400" height="400" style="border: 1px solid;"></canvas>
+        <section class="project-section">
+            <div class="project-text">
+                <h1>Current Projects</h1>
+                <div class="project-description">
+                    <p>I am not currently working on any projects</p>
+                </div>
+            </div>
+            <div class="project-gif">
+                <!-- Remove the <img> tag here -->
             </div>
         </section>
-        <section id="education">
-            <h2>Education</h2>
-            <h3>University of Pittsburgh</h3>
-            <p>Information Science, 2020 - 2024</p>
+        <section class="project-section">
+            <div class="project-text">
+                <div class="project-description">
+                    <h1>Most Recent Project</h1>
+                    <h2>ASLModel</h2>
+                    <h3>STEELHACKS 2023 - 1st Place Overall Winner</h3>
+                    <h4>Team: Logan Warren, Brayden Nguyen, Xavier Bear, Chris Landingin </h4>
+
+                    <a href="ASL\index.html">Run the ASLModel</a>
+                    <br><br>
+                    <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
+                    <p>Our ASL Letter Recognition web application is designed to recognize 
+                        American Sign Language (ASL) letters in real-time from live video input. 
+                        The application works by taking in live video footage from the device's webcam of the user's hands, 
+                        processing it using a neural network that we have trained to 75% accuracy, and then writing the 
+                        corresponding ASL letter on the screen.
+                    <br><br>
+                    To train our model, we used over 25,000 pictures of ASL letters. We created tensors using TensorFlow, 
+                    which is an open-source machine learning library developed by Google, and then used these tensors to input into our model. 
+                    By training our model on this data, it was able to learn the patterns and features that are specific to each letter in the ASL alphabet.
+                    <br><br>
+                    Once our model has been trained, we integrated it into our web application 
+                    using TensorFlow.js. TensorFlow.js is a JavaScript library that allows us to 
+                    run machine learning models directly in the browser, without the need for any 
+                    server-side processing. This means that our ASL Letter Recognition application can run entirely on the 
+                    client-side, making it fast and responsive.
+                    <br><br>
+                    Overall, our ASL Letter Recognition web application is a powerful tool for helping people 
+                    communicate more effectively with those who use ASL. It is a proof of concept for deeper and more 
+                    complex ASL to be translated almost instantly. By leveraging the power of machine learning and deep 
+                    learning algorithms, we are able to create an application that is highly accurate and responsive,
+                    making it easy for anyone to use.
+                    </p>
+                </div>
+            </div>
+            <div class="recent-project-gif">
+                <img src="\Images\Model.gif" alt="ASLModel gif" />
+            </div>
         </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <h3>Intern, Company XYZ</h3>
-            <p>June 2022 - August 2022</p>
-            <ul>
-                <li>Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li>
-            </ul>
+        <section class="project-section">
+            <div class="project-text">
+                <h2>Projects</h2>
+                <div class="project-description">
+                    <!-- ... -->
+                </div>
+            </div>
+            <div class="project-gif">
+                <!-- Remove the <img> tag here -->
+            </div>
         </section>
-        <!-- Add more sections for skills, certifications, etc. -->
     </main>
     <footer>
         <p>&copy; 2023 Logan Warren. All rights reserved.</p>
     </footer>
-    <script src="snake_game.js"></script>
 </body>
 </html>
