--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="recent-project-gif">
-                <img src="Personal-Website\Images\Model.gif"/>
+                <img src="/Images/Model.gif"/>
             </div>
         </section>
         <section class="project-section">
