--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="recent-project-gif">
-                <img src="https://github.com/LoganWarren/Personal-Website/blob/main/Images/Model.gif" alt="ASLModel gif" />
+                <img src="https://raw.githubusercontent.com/LoganWarren/Personal-Website/main/Images/Model.gif" />            </div>
             </div>
         </section>
         <section class="project-section">
