--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -12,7 +12,7 @@
         <h1 class="main-title">Logan Warren - Projects </h1>
         
         <div class="nav-links">
-            <a href="./index.html" class="nav-link">Home</a>
+            <a href="../index.html" class="nav-link">Home</a>
             <a href="./ResumePage/resume.html"class="nav-link">Resume</a>
         </div>
     </div>
