--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -13,7 +13,7 @@
         
         <div class="nav-links">
             <a href="/Personal-Website/index.html" class="nav-link">Home</a>
-            <a href="./ResumePage/resume.html"class="nav-link">Resume</a>
+            <a href="/Personal-Website/ResumePage/resume.html"class="nav-link">Resume</a>
         </div>
     </div>
     <main>
