--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -11,10 +11,11 @@
     <div class="title-bar">
         <h1 class="main-title">Logan Warren - Projects </h1>
         
-        <div class="nav-links">
-            <a href="\index.html" class="nav-link">Home</a>
-            <a href="/Personal-Website/ResumePage/resume.html"class="nav-link">Resume</a>
-        </div>
+       <div class="nav-links">
+    <a href="index.html" class="nav-link">Home</a>
+    <a href="ResumePage/resume.html" class="nav-link">Resume</a>
+</div>
+
     </div>
     <main>
         <section class="project-section">
@@ -64,7 +65,7 @@
                 </div>
             </div>
             <div class="recent-project-gif">
-                <img src="Images/Model.gif" alt="ASLModel gif" />
+                <img src="Images/Model.gif">
             </div>
         </section>
         <section class="project-section">
