--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="recent-project-gif">
-            <img src="./Images/Model.gif" alt="ASLModel gif" max-width=100% max-height=100% />            
+            <img src="Model.gif" alt="ASLModel gif"/>            
             </div>
         </section>
         <section class="project-section">
