--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -37,7 +37,7 @@
                     <h3>STEELHACKS 2023 - 1st Place Overall Winner</h3>
                     <h4>Team: Logan Warren, Brayden Nguyen, Xavier Bear, Chris Landingin </h4>
 
-                    <a href="ASL\index.html">Run the ASLModel</a>
+                    <a href="\ASL\index.html">Run the ASLModel</a>
                     <br><br>
                     <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
                     <p>Our ASL Letter Recognition web application is designed to recognize 
