--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -37,7 +37,9 @@
                     <h3>STEELHACKS 2023 - 1st Place Overall Winner</h3>
                     <h4>Team: Logan Warren, Brayden Nguyen, Xavier Bear, Chris Landingin </h4>
 
-                    <link href="ASL/index.html">Run the ASLModel</link>
+                    <link 
+                    <a href="ASL/index.html">Run the ASLModel </a>
+                    </link>
                     <br><br>
                     <a href="https://github.com/LoganWarren/ASLModel" target="_blank">View ASLModel on GitHub</a>
                     <p>Our ASL Letter Recognition web application is designed to recognize 
