project.html WORKS

--- a/ProjectsPage/project.html
+++ b/ProjectsPage/project.html
@@ -12,8 +12,8 @@
         <h1 class="main-title">Logan Warren - Projects </h1>
         
        <div class="nav-links">
-    <a href="index.html" class="nav-link">Home</a>
-    <a href="ResumePage\resume.html">Resume</a>
+    <a href="/index.html" class="nav-link">Home</a>
+    <a href="/ResumePage/resume.html">Resume</a>
 </div>
 
     </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="recent-project-gif">
-            <img src="Model.gif" alt="ASLModel gif"/>            
+            <img src="/Images/Model.gif" alt="ASLModel gif"/>            
             </div>
         </section>
         <section class="project-section">
