--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="AboutMePage\about-me.html">About</a></li>
+            <li><a href="AboutMePage/about-me.html">About</a></li>
             <li><a href="ProjectsPage\project.html">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="ResumePage\resume.html">Resume</a></li>
